cmake_minimum_required(VERSION 3.27)
project(cppSIDF)

set(CMAKE_CXX_STANDARD 23)

add_executable(task1 Practice/Week1/task1.cpp
        Practice/Week1/task3.cpp
        Practice/Week1/task5.cpp
        Practice/Week1/task6.cpp
        Practice/Week1/task7.cpp
        Practice/Week1/task8.cpp
        Practice/Week1/task9.cpp
        Practice/Week1/task10.cpp
        Practice/Week1/task11.cpp)
add_executable(task2 Practice/Week1/task2.cpp)
add_executable(task3 Practice/Week1/task3.cpp)
add_executable(task4 Practice/Week1/task4.cpp)
add_executable(task5 Practice/Week1/task5.cpp)
add_executable(task6 Practice/Week1/task6.cpp)
add_executable(task7 Practice/Week1/task7.cpp)
add_executable(task8 Practice/Week1/task8.cpp)
add_executable(task9 Practice/Week1/task9.cpp)
add_executable(task10 Practice/Week1/task10.cpp)
add_executable(task11 Practice/Week1/task11.cpp)