cmake_minimum_required(VERSION 3.27)
project(cppSIDF)

set(CMAKE_CXX_STANDARD 23)



add_executable(task1 Practice/Week1/task1.cpp)
add_executable(task2 Practice/Week1/task2.cpp)
add_executable(task3 Practice/Week1/task3.cpp)
add_executable(task4 Practice/Week1/task4.cpp)
add_executable(task5 Practice/Week1/task5.cpp)
add_executable(task6 Practice/Week1/task6.cpp)
add_executable(task7 Practice/Week1/task7.cpp)
add_executable(task8 Practice/Week1/task8.cpp)
add_executable(task9 Practice/Week1/task9.cpp)
add_executable(task10 Practice/Week1/task10.cpp)
add_executable(task11 Practice/Week1/task11.cpp)


add_executable(2task1 Practice/Week2/task1.cpp)
add_executable(2task2 Practice/Week2/task2.cpp)
add_executable(2task3 Practice/Week2/task3.cpp)
add_executable(2task4 Practice/Week2/task4.cpp)
add_executable(2task5 Practice/Week2/task5.cpp)
add_executable(2task6 Practice/Week2/task6.cpp)
add_executable(2task7 Practice/Week2/task7.cpp)
add_executable(2task8 Practice/Week2/task8.cpp)
add_executable(2task9 Practice/Week2/task9.cpp)
add_executable(2task10 Practice/Week2/task10.cpp)
add_executable(2task11 Practice/Week2/task11.cpp)
add_executable(2task12 Practice/Week2/task12.cpp)
add_executable(2task13 Practice/Week2/task13.cpp)
add_executable(2task14 Practice/Week2/task14.cpp)
add_executable(2task15 Practice/Week2/task15.cpp)